--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,4 @@ spring.application.name=storage
 spring.datasource.url=jdbc:postgresql://localhost:5432/storage_db
 spring.datasource.username=keeper
 spring.datasource.password=password
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=validate
