Experiments with jpa

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=storage
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/storage_db
+spring.datasource.url=jdbc:postgresql://localhost:5432/storage_base
 spring.datasource.username=keeper
 spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.show-sql=true
